--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.6",
-        "laravel/laravel": "^5.2"
+        "laravel/framework": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4"
